# Campus-Bulletin-Board-System

./: CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  boards.py  comments.py  likes.py  notifications.py  posts.py  users.py
backend/app/schemas/: __init__.py  auth.py  response.py  user.py
backend/app/services/: __init__.py  auth_service.py  user_service.py
backend/app/utils/: __init__.py  redis.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 779e4985f317_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_users.py
docs/: DatabaseDesign.md  DevelopmentSpecification.md  ProjectRequirements.md
